Fixes alignment of checkboxes on Components admin panel.
Fixes #4390

Props mercime

git-svn-id: https://buddypress.svn.wordpress.org/trunk@6217 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-core/admin/css/common.dev.css
+++ b/bp-core/admin/css/common.dev.css
@@ -141,3 +141,8 @@ ul#adminmenu li.toplevel_page_bp-activity_network.wp-has-current-submenu .wp-men
 .settings_page_bp-components tr.members td.plugin-title span {
 	background-position-x: -36px;
 }
+
+#bp-admin-component-form .widefat th {
+    display: table-cell;
+    vertical-align: top;
+}
